Create the nav in the website

--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>The web</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Menu -->
+  <header id="header">
+    <a href="#" class="logo">TheWeb</a>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#web1">WEB 1</a></li>
+      <li><a href="#web2">WEB 2</a></li>
+      <li><a href="#web3">WEB 3</a></li>
+      <li><a href="#web4">WEB 4</a></li>
+    </ul>
+  </header>
 
+  <!-- Banner -->
+  <section class="banner" id="home">
+    <h2>Hablemos sobre <span> la web</span></h2>
+  </section>
 </body>
 </html>
