finish details to header and add new section

--- a/index.html
+++ b/index.html
@@ -22,7 +22,21 @@
 
   <!-- Banner -->
   <section class="banner" id="home">
-    <h2>Hablemos sobre <span> la web</span></h2>
+    <h2>Hablemos sobre <hr><span> la web</span></h2>
   </section>
+
+  <!--The Web 1-->
+  <section class="sec" id="web1">
+    <div class="content">
+      <div class="mix800p">
+        <h3>Who we are</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae soluta enim labore, at nihil ab minima, ipsum eos velit vero odit aut sapiente quasi libero possimus consequatur beatae saepe earum?</p>
+        <a href="#" class="btn"> Read our story</a>
+      </div>
+    </div>
+
+  </section>
+
+  <script src="./js/app.js"></script>
 </body>
 </html>
