add new pictures and add details to section

--- a/index.html
+++ b/index.html
@@ -26,16 +26,48 @@
   </section>
 
   <!--The Web 1-->
-  <section class="sec" id="web1">
+  <section class="sec-one" id="web1">
     <div class="content">
-      <div class="mix800p">
-        <h3>Who we are</h3>
+      <div class="content-text">
+        <h3>Web 1</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae soluta enim labore, at nihil ab minima, ipsum eos velit vero odit aut sapiente quasi libero possimus consequatur beatae saepe earum?</p>
-        <a href="#" class="btn"> Read our story</a>
+        <img src="./img/web1.jpg" alt="computadora">
       </div>
     </div>
-
   </section>
+
+  <!--The web 2-->
+  <section class="sec-second" id="web2">
+    <div class="content">
+      <div class="content-text">
+        <h3>Web 2</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae soluta enim labore, at nihil ab minima, ipsum eos velit vero odit aut sapiente quasi libero possimus consequatur beatae saepe earum?</p>
+        <img src="./img/web2.jpg" alt="computadora">
+      </div>
+    </div>
+  </section>
+
+<!--The Web 3-->
+<section class="sec-third" id="web3">
+  <div class="content">
+    <div class="content-text">
+      <h3>Web 3</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae soluta enim labore, at nihil ab minima, ipsum eos velit vero odit aut sapiente quasi libero possimus consequatur beatae saepe earum?</p>
+      <img src="./img/web3.jpg" alt="computadora">
+    </div>
+  </div>
+</section>
+
+<!--The web 4-->
+<section class="sec-quarter" id="web4">
+  <div class="content">
+    <div class="content-text">
+      <h3>Web 4</h3>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae soluta enim labore, at nihil ab minima, ipsum eos velit vero odit aut sapiente quasi libero possimus consequatur beatae saepe earum?</p>
+      <img src="./img/web4.jpg" alt="computadora">
+    </div>
+  </div>
+</section>
 
   <script src="./js/app.js"></script>
 </body>
