add information to section web 1

--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
     <div class="content">
       <div class="content-text">
         <h3>Web 1</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae soluta enim labore, at nihil ab minima, ipsum eos velit vero odit aut sapiente quasi libero possimus consequatur beatae saepe earum?</p>
+        <p>En el año de 1990 las paginas web estaban formadas por HTML, las paginas eran
+          estaticas porque solo tenian contenido informativo y no tenian ningun metodo
+          interactivo para el usuario. Era demasiado simple pero un gran avance de
+          la tecnologia en ese tiempo. En la web 1.0 no era muy común el implemento de las hojas de estilo
+          lo cual el  diseño se hacia directamente en HTML. Hoy en dia el agregar directamente los estilos
+          es algo fatal en las buenas practicas como programador.
+        </p>
         <img src="./img/web1.jpg" alt="computadora">
       </div>
     </div>
