add information to section web 2

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <section class="sec-one" id="web1">
     <div class="content">
       <div class="content-text">
-        <h3>Web 1</h3>
+        <h3>WEB 1</h3>
         <p>En el año de 1990 las paginas web estaban formadas por HTML, las paginas eran
           estaticas porque solo tenian contenido informativo y no tenian ningun metodo
           interactivo para el usuario. Era demasiado simple pero un gran avance de
@@ -46,8 +46,16 @@
   <section class="sec-second" id="web2">
     <div class="content">
       <div class="content-text">
-        <h3>Web 2</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae soluta enim labore, at nihil ab minima, ipsum eos velit vero odit aut sapiente quasi libero possimus consequatur beatae saepe earum?</p>
+        <h3>WEB 2</h3>
+        <p>Conocemos a la web 2.0 como la web social. En 2004 se crea el termino para
+          la nueva era de la tecnologia por los nuevos aportes que surgieron para mejorar
+          el servicio en la web. El usurio comenzo a tener una mayor interectividad
+          con sus paginas o sitios de su preferencia. El usuario podía aportar
+          comentarios, agregar contenido, etc. Sin embargo, lo que dejo una gran huella
+          en la historia o evolución fueron las redes sociales.
+          Aquí en la web 2.0 el usuario ya creaba contenido y no solo lo consumia
+          de forma informativa como en la web 1.0.
+        </p>
         <img src="./img/web2.jpg" alt="computadora">
       </div>
     </div>
@@ -57,7 +65,7 @@
 <section class="sec-third" id="web3">
   <div class="content">
     <div class="content-text">
-      <h3>Web 3</h3>
+      <h3>WEB 3</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae soluta enim labore, at nihil ab minima, ipsum eos velit vero odit aut sapiente quasi libero possimus consequatur beatae saepe earum?</p>
       <img src="./img/web3.jpg" alt="computadora">
     </div>
@@ -68,7 +76,7 @@
 <section class="sec-quarter" id="web4">
   <div class="content">
     <div class="content-text">
-      <h3>Web 4</h3>
+      <h3>WEB 4</h3>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae soluta enim labore, at nihil ab minima, ipsum eos velit vero odit aut sapiente quasi libero possimus consequatur beatae saepe earum?</p>
       <img src="./img/web4.jpg" alt="computadora">
     </div>
