add information to section web 4

--- a/index.html
+++ b/index.html
@@ -84,7 +84,16 @@
   <div class="content">
     <div class="content-text">
       <h3>WEB 4</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae soluta enim labore, at nihil ab minima, ipsum eos velit vero odit aut sapiente quasi libero possimus consequatur beatae saepe earum?</p>
+      <p>
+        La web 4.0 es un gran paso a la evolución de la tecnologia. Aquí hablaremos
+        sobre las maquinas y su enfoque para entender a los seres humanos. El termino
+        surge en el 2016 y tambien es conocida como la web activa.
+        Las maquinas seran el objetivo proncipal para poder satisfacer las necesidades
+        humanas, desde la perspectiva para generar una facilidad de uso en la vida
+        cotidiana. En la actialidad tenemos grandes ejemplos, como los  de los agentes
+        inteligentes que chatean cual humanos, de las casas inteligentes, de las smart
+        cities, etc.
+      </p>
       <img src="./img/web4.jpg" alt="computadora">
     </div>
   </div>
