--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
   </div>
 </section>
 
+<footer>
+  <div class="copyright">
+    <p> Diseñado & Creado por <span> Anahi Quintero</span></p>
+  </div>
+</footer>
+
   <script src="./js/app.js"></script>
 </body>
 </html>
