add finish details

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <div class="content">
       <div class="content-text">
         <h3>WEB 1</h3>
-        <p>En el año de 1990 las paginas web estaban formadas solo por HTML, las paginas eran
-          estaticas porque tenian contenido informativo y no tenian ningun metodo
-          interactivo para el usuario. Era demasiado simple pero un gran avance de
-          la tecnologia en ese tiempo. En la web 1.0 no era muy común el uso de las hojas de estilo
-          por lo cual el  diseño se hacia directamente en HTML. Hoy en dia el agregar directamente los estilos
-          es algo fatal en las buenas practicas como programador.
+        <p>En el año de 1990 las páginas web estaban formadas solo por HTML, las páginas eran
+          estáticas porque tenían contenido informativo y no tenían ningún método
+          interactivo para el usuario. Era demasiado simple, pero un gran avance de
+          la tecnología en ese tiempo. En la web 1.0 no era muy común el uso de las hojas de estilo
+          por lo cual el diseño se hacía directamente en HTML. Hoy en día el agregar directamente los estilos
+          es algo fatal en las buenas prácticas como programador.
         </p>
         <img src="./img/web1.jpg" alt="computadora">
       </div>
@@ -47,13 +47,13 @@
     <div class="content">
       <div class="content-text">
         <h3>WEB 2</h3>
-        <p>Conocemos a la web 2.0 como la web social. En 2004 se crea el termino para
-          la nueva era de la tecnologia por los nuevos aportes que surgieron para mejorar
-          el servicio en la web. El usurio comenzo a tener una mayor interectividad
-          con sus paginas o sitios de su preferencia. El usuario podía aportar
+        <p>Conocemos a la web 2.0 como la web social. En 2004 se crea el término para
+          la nueva era de la tecnología por los nuevos aportes que surgieron para mejorar
+          el servicio en la web. El usuario comenzó a tener una mayor interactividad
+          con sus páginas o sitios de su preferencia. El usuario podía aportar
           comentarios, agregar contenido, etc. Sin embargo, lo que dejo una gran huella
           en la historia o evolución fueron las redes sociales.
-          Aquí en la web 2.0 el usuario ya creaba contenido y no solo lo consumia
+          Aquí en la web 2.0 el usuario ya producía contenido y no solo lo consumía
           de forma informativa como en la web 1.0.
         </p>
         <img src="./img/web2.jpg" alt="computadora">
@@ -66,13 +66,14 @@
   <div class="content">
     <div class="content-text">
       <h3>WEB 3</h3>
-      <p> El termino de la web 3.0 fue creado en 2014 por el cofundador de la
-        criptomoneda ethereum, Gavin Wood. Conoceos a Tim Berners-Lee como el padre
-        de internet. Y wood es el padre de etherum. Etherum es el segundo protocolo
-        de blockchain más usado. Y esta tecnología son las bases de la Web3.
-        Lo más relevante en la web 3.0 fue la facilidad que se genero al poder utilizar
+      <p>
+        El término de la web 3.0 fue creado en 2014 por el cofundador de la
+        criptomoneda Ethereum, Gavin Wood. Conoceos a Tim Berners-Lee como el padre
+        de internet. Y Wood es el padre de Ethereum. Ethereum es el segundo protocolo
+        de blockchain más usado. Y esta tecnología son las bases de la Web 3.
+        Lo más relevante en la web 3.0 fue la facilidad que se generó al poder utilizar
         la nube, de esta forma no saturas tu computadora, porque ahora tu
-        información esta más segura en la nube.
+        información está más segura en la nube.
       </p>
       <img src="./img/web3.jpg" alt="computadora">
     </div>
@@ -85,13 +86,13 @@
     <div class="content-text">
       <h3>WEB 4</h3>
       <p>
-        La web 4.0 es un gran paso a la evolución de la tecnologia. Aquí hablaremos
-        sobre las maquinas y su enfoque para entender a los seres humanos. El termino
-        surge en el 2016 y tambien es conocida como la web activa.
-        Las maquinas seran el objetivo proncipal para poder satisfacer las necesidades
+        La web 4.0 es un gran paso a la evolución de la tecnología. Aquí hablaremos
+        sobre las máquinas y su enfoque para entender a los seres humanos. El término
+        surge en el 2016 y también es conocida como la web activa.
+        Las maquinas serán el objetivo principal para poder satisfacer las necesidades
         humanas, desde la perspectiva para generar una facilidad de uso en la vida
-        cotidiana. En la actialidad tenemos grandes ejemplos, como los  de los agentes
-        inteligentes que chatean cual humanos, de las casas inteligentes, de las smart
+        cotidiana. En la actualidad tenemos grandes ejemplos, como los de los agentes
+        inteligentes que chatean cuál humanos, de las casas inteligentes, de las smart
         cities, etc.
       </p>
       <img src="./img/web4.jpg" alt="computadora">
