add responsive design

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
   <header id="header">
     <a href="#" class="logo">TheWeb</a>
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#web1">WEB 1</a></li>
-      <li><a href="#web2">WEB 2</a></li>
-      <li><a href="#web3">WEB 3</a></li>
-      <li><a href="#web4">WEB 4</a></li>
+      <li><a href="#home" onclick="toggle()">Home</a></li>
+      <li><a href="#web1" onclick="toggle()">WEB 1</a></li>
+      <li><a href="#web2" onclick="toggle()">WEB 2</a></li>
+      <li><a href="#web3" onclick="toggle()">WEB 3</a></li>
+      <li><a href="#web4" onclick="toggle()">WEB 4</a></li>
     </ul>
+    <div class="toggle" onclick="toggle()"></div>
   </header>
 
   <!-- Banner -->
